<resources>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="app_name">PlayForLearn</string>

    <!-- Strings related to login -->
    <string name="ok">Ok</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="str_next">Avanti</string>
    <string name="title_activity_result">Results!!!</string>

    <string name="annulla">Annulla</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="nome">Nome</string>
    <string name="username">Username</string>
    <string name="classe">Classe</string>
    <string name="italiano">Italiano</string>
    <string name="mate">Matematica</string>
    <string name="ing">Inglese</string>
    <string name="storia">Storia </string>
    <string name="geografia">Geografia</string>
    <string name="cognome">Cognome</string>
    <string name="promptUsername">Usermame</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Accedi</string>
    <string name="action_register">Registrati</string>
    <string name="error_invalid_email">Username non valido</string>
    <string name="error_invalid_password">password troppo corta</string>
    <string name="error_incorrect_password"> password non corretta</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing username completions."     </string>
    <string name="title_activity_games">Games</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->@string/prima
    <string name="prompt_email">Email</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="title_activity_notifica">Notifica</string>
    <string name="prima">Prima</string>
    <string name="terza">Terza</string>
    <string name="quarta">Quarta</string>
    <string name="quinta">Quinta</string>
    <string name="seconda">Seconda</string>


</resources>
