<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.design.widget.TextInputEditText
            android:layout_width="385dp"
            android:layout_height="wrap_content"
            android:id="@+id/tietNome"
            android:inputType="textShortMessage"
            android:hint="nome"/>

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textFilter"
            android:id="@+id/tietCognome"
            android:hint="cognome"/>

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tietUsername"
            android:hint="username"/>

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tietPassword"
            android:hint="password"/>
    </LinearLayout>

    <LinearLayout
        android:paddingTop="25px"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:paddingLeft="5px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Classe"/>

            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbPrima"
                android:text="@string/prima"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbSeconda"
                android:text="@string/seconda"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbTerza"
                android:text="@string/terza"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbQuarta"
                android:text="@string/quarta" />
            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbQuinta"
                android:text="@string/quinta"/>
        </LinearLayout>

        <LinearLayout
            android:paddingLeft="15px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Materie"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbMateriaItaliano"
                android:text="@string/italiano"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbMateriaMatematica"
                android:text="@string/mate"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbMateriaInglese"
                android:text="@string/ing"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbMateriaStoria"
                android:text="@string/storia"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbMateriaGeografia"
                android:text="@string/geografia"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:paddingBottom="15px"
        android:gravity="bottom"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:text="Registrati"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:id="@+id/btRegistrati" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Annulla"
            android:layout_marginLeft="30dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:id="@+id/btAnnulla" />
    </LinearLayout>
</LinearLayout>