<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorTrasparente"
                android:src="@drawable/star"/>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:id="@+id/username"
                android:hint="@string/username"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nome"
                android:textSize="20dp"
                android:hint="@string/nome"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cognome"
                android:textSize="20dp"
                android:hint="@string/cognome"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:layout_marginTop="20dp"
        android:text=" Classi: "/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:paddingLeft="30dp"
        android:layout_height="wrap_content">

        <RadioButton
            android:text="Prima"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton" />

        <RadioButton
            android:text="Seconda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton2" />

        <RadioButton
            android:text="Terza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton3" />

        <RadioButton
            android:text="Quarta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton4" />

        <RadioButton
            android:text="Quinta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton5" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="Opzioni Account"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="logout"
            android:layout_margin="20dp"
            android:layout_gravity="left"
            android:background="@color/colorTrasparente"
            android:src="@drawable/icona_logout"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="home"
            android:layout_margin="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorTrasparente"
            android:src="@drawable/icona_home"
            android:id="@+id/home"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="aggiungiUtente"
            android:layout_gravity="right"
            android:layout_margin="20dp"
            android:background="@color/colorTrasparente"
            android:src="@drawable/plus2"/>
    </LinearLayout>

</LinearLayout>